message for this commit

--- a/Style.html
+++ b/Style.html
@@ -17,6 +17,25 @@
     </div>
     <div class="top-bar">
         <img src="menu.png" class="menue">
+        <div class="sociallinks">
+        <img src="fb.png">
+        <img src="ig.png">
+        <img src="tw.png">
+    </div>
+
+    <div class="useful">
+        <img src="share.png">
+        <img src="info.png">
+    </div>
+    </div>
+    <div class="bubles">
+        <img src="bubble.png">
+        <img src="bubble.png">
+        <img src="bubble.png">
+        <img src="bubble.png">
+        <img src="bubble.png">
+        <img src="bubble.png">
+        <img src="bubble.png">
     </div>
     </div>
 </body>
